# freematters

./: .gitignore  .release-please-manifest.json  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  dummy-test-file.md  dummy-test.txt  package-lock.json  package.json  release-please-config.json  skills-lock.json  tsconfig.json  vitest.claude.config.ts  vitest.config.ts
.agents/skills/: pr-lifecycle  release  spec-driven  spec-gen  spec-to-code
.claude-plugin/: plugin.json
.claude/commands/: e2e-run.md  pdd.md  pr.md  quick.md  release.md  spec-driven.md  spec-gen.md  spec-to-code.md
.claude/skills/: e2e-fix  e2e-gen  pr-lifecycle  spec-gen  spec-to-code
.freeflow/workflows/: e2e-fix.workflow.yaml
.freefsm/workflows/: e2e-fix.fsm.yaml
.github/workflows/: ci.yml  claude.yml  code-review.yml  release.yml
docs/: claude-code-channel-plugin-guide.md  design-alternative.md
docs/specs/: 2026-03-21-channels-package-design.md  2026-03-21-channels-package-plan.md
e2e/: background-task.workflow.yaml  run-stops-for-user-input.md
freeflow/: README.md  biome.json  package.json  vitest.claude.config.ts  vitest.integration.config.ts
freeflow/.claude-plugin/: marketplace.json
freefsm/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  vitest.config.ts
hello-world-cli/: biome.json  package-lock.json  package.json
plans/: milestones.md
scripts/: reinstall.sh
tests/: qa.fsm.yaml
weather-cli/: Cargo.toml
weather-cli/src/: cli.rs  display.rs  geocoder.rs  json.rs  main.rs  weather.rs
weather-cli/tests/: integration.rs
(+277 files in other folders)
